# sptools

./: README.md  pyproject.toml  sptools.py
sptools/: config.toml  sptools.py
